<resources>
    <string name="app_name">ExoHomeLibrarySample</string>
    <string name="provision">Provision</string>
    <string name="connect_without_token">Connect without token</string>
    <string name="connect_with_token">Connect with token</string>
    <string name="productId">Product id (replace it to yours)</string>
    <string name="title_activity_sample">SampleActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restore_default">Do you want to restore the default settings?</string>
    <string name="share">Share</string>

    <string name="unlogin">Unlogin</string>
    <string name="logging_in">Logging in</string>
    <string name="gain_session_token">Gaining session token</string>
    <string name="got_owner_provision_token">Got owner provision token</string>
    <string name="gain_owner_provision_token">Gaining owner provision token</string>
    <string name="invalidate_data">Invalidate data</string>
    <string name="device_registration">Device registration</string>
    <string name="provision_completed">Provision completed</string>
    <string name="gain_device_provision_token">Gaining device provision token</string>
    <string name="sending_info">Sending rest info</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>

    <string name="user_login">User Login</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="product_id">Product id</string>
    <string name="device_id">Device id</string>
    <string name="connect_to_exohome">Connect to ExoHome</string>
    <string name="mock_mac_address">Mock MAC Address</string>
    <string name="settings">Settings</string>
    <string name="reset_app">Reset App</string>
    <string name="reset_warning">This action will remove all current saved data to be blank</string>
</resources>
